# Winmux

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  activity.test.ts  activity.ts  commands.ts  features.test.ts  layout.test.ts  layout.ts  links.ts  main.tsx  notifications.ts  ordering.test.ts  ordering.ts  profiles.ts  search.ts  settings.ts  shellIntegration.ts  storage.ts  styles.css  terminalRegistry.ts  types.ts  ui.test.tsx  useShortcuts.ts  useWorkspaceStore.test.tsx  useWorkspaceStore.ts  waitingDetection.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityIndicator.tsx  AppDialogs.tsx  CommandPalette.tsx  IconButton.tsx  ProfileMenu.tsx  SettingsDialog.tsx  SplitLayout.tsx  TerminalPane.tsx  TerminalSearch.tsx  TitleBar.tsx  WorkspaceSidebar.tsx
src/components/settings/: AppearanceSettings.tsx  ThemePreview.tsx  ThemeSelector.tsx
src/themes/: apply-theme.ts  autoblog.ts  black-and-pink.ts  designbyte.ts  openclaw.ts  registry.ts  shopify-red.ts  sky.ts  theme-2077.ts  theme.test.tsx  types.ts
website/: index.html  styles.css
website/docs/: index.html
