[package]
name = "winmux"
version = "0.1.0"
description = "A Windows terminal folder manager"
authors = ["Winmux"]
edition = "2021"

[lib]
name = "winmux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2.5.4"
tauri-winrt-notification = "0.7.3"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"] }
